Finally adding content

--- a/default.html
+++ b/default.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
@@ -12,36 +12,27 @@
 
     <title>Randy Wiebe</title>
 
-    <link rel="stylesheet" href="default.css">
+    <link href="./css/default.css" rel="stylesheet" >
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron.css" rel="stylesheet">
+    <link href="./css/jumbotron.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <!--<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Randy Wiebe</a>
+                </button>-->
+                <p class="navbar-brand">Randy Wiebe</p>
             </div>
-            <div id="navbar" class="navbar-collapse collapse">
-                <!--<form class="navbar-form navbar-right">
-                    <div class="form-group">
-                        <input type="text" placeholder="Email" class="form-control">
-                    </div>
-                    <div class="form-group">
-                        <input type="password" placeholder="Password" class="form-control">
-                    </div>
-                    <button type="submit" class="btn btn-success">Sign in</button>
-                </form>-->
+            <div id="navbar" class="navbar-collapse collapse">                
             </div><!--/.navbar-collapse -->
         </div>
     </nav>
@@ -58,20 +49,21 @@
     <div class="container">
         <!-- Example row of columns -->
         <div class="row gold-text">
-            <div class="col-md-4">
-                <h2>About</h2>
-                <p>Learn more about me and my experience as a software developer.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-            </div>
-            <div class="col-md-4">
+			<div class="col-md-4">
                 <h2>Projects</h2>
                 <p>View my other projects - past, present, and future.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="projects.html" role="button">View details &raquo;</a></p>
             </div>
+            <div class="col-md-4">
+                <h2>About</h2>
+                <p>Learn more about me and my experience.</p>
+                <p><a class="btn btn-default" href="about.html" role="button">View details &raquo;</a></p>
+            </div>
+            
             <div class="col-md-4">
                 <h2>Contact</h2>
                 <p>Get in touch.</p>
-                <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                <p><a class="btn btn-default" href="contact.html" role="button">View details &raquo;</a></p>
             </div>
         </div>
 
