--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 <body onload="showThisSiteContent()">
     <div class="top-menu">
         <div class="top-menu-buttons">
-            <a href="defaultv2.html">Home</a>
+            <a href="default.html">Home</a>
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
         </div>
