Added subheading to home page
Added subheading to home page

--- a/default.html
+++ b/default.html
@@ -8,6 +8,7 @@
 <body>
     <div class="jumbotron">
         <h1>Randy Wiebe</h1>
+        <h2>A work in progress.</h2>
     </div>
     <div class="default-buttons">
         <div id="row">            
