--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,16 @@
                     </p>
                 </div>-->
                 <div class="blog-post">
+                    <h4>2015-09-02</h4>
+                    <p>
+                        Small updates today. I added a subheading that I thought was representative of myself and of this website.
+                    </p>
+                    <p>
+                        I also noticed that on a wider screen, two blog posts end up side by side before stacking vertically, which
+                        gets confusing until you look at the dates.
+                    </p>
+                </div>
+                <div class="blog-post">
                     <h4>2015-08-31</h4>
                     <p>
                         My goal for today was to get the menu on the left working, so that content for each item on the list shows when that list item is clicked.
