--- a/about.html
+++ b/about.html
@@ -13,14 +13,17 @@
     <title>Randy Wiebe</title>
 
     <link href="./css/default.css" rel="stylesheet">
-
-    <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="./css/jumbotron.css" rel="stylesheet">
 </head>
-<body class="gold-text">
+<body>
+    <div class="top-menu">
+        <div class="top-menu-buttons">
+            <a href="default.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="contact.html">Contact</a>
+        </div>
+    </div>
+    <div id="layout">
 
+    </div>
 </body>
 </html>
