--- a/contact.html
+++ b/contact.html
@@ -13,14 +13,18 @@
     <title>Randy Wiebe</title>
 
     <link href="./css/default.css" rel="stylesheet">
-
-    <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="./css/jumbotron.css" rel="stylesheet">
+    
 </head>
 <body>
+    <div class="top-menu">
+        <div class="top-menu-buttons">
+            <a href="default.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+        </div>
+    </div>
+    <div id="layout">
 
+    </div>
 </body>
 </html>
