--- a/projects.html
+++ b/projects.html
@@ -13,11 +13,6 @@
     <title>Randy Wiebe</title>
 
     <link href="./css/default.css" rel="stylesheet">
-
-    <!-- Bootstrap core CSS -->
-    <!--<link href="./css/bootstrap.min.css" rel="stylesheet">-->
-    <!-- Custom styles for this template -->
-    <!--<link href="./css/jumbotron.css" rel="stylesheet">-->
 </head>
 <body onload="showThisSiteContent()">
     <div class="top-menu">
@@ -93,7 +88,23 @@
                         Content.
                     </p>
                 </div>-->
-
+                <div class="blog-post">
+                    <h4>2015-09-05</h4>
+                    <p>
+                        The purpose of this website was to allow my friend Dave to post content, and link to the content posted on his facebook wall to allow him to reach a wider audience.
+                        The easiest way to post content is to edit the html directly, but that would require Dave to have access to the website's administrative account. Not that I don't trust him,
+                        but handing out admin credentials is not a viable long-term solution.
+                    </p>
+                    <p>
+                        The next step is to add a feature to the website that will allow visitors to sign up for accounts and log in on subsequent visits. The main goal will be to allow a certain role
+                        to publish content, but users assigned to other roles could have additional privileges eventually. I'll also need a way to manage user roles, since I probably don't want
+                        users deciding their own roles when they sign up.
+                    </p>
+                    <p>
+                        I've started implementing a MySQL database. I have an initial design for users, roles, permissions, etc implemented, so the next step is adding the server and client-side
+                        functionality that allows people to sign up and log in. Should be interesting.
+                    </p>
+                </div>
                 <div class="blog-post">
                     <h4>2015-08-31</h4>
                     <p>
